--- a/aknotes/config/smigle.yml
+++ b/aknotes/config/smigle.yml
@@ -3,6 +3,7 @@ baseURL: https://aknotes.dev/ # Replace with your domain
 languageCode: en-us
 theme: smigle
 title: Ashok Kadambala
+publishDir: docs
 menu:
   main: # Change menu as needed
     - identifier: home
