--- a/aknotes/config/smigle.yml
+++ b/aknotes/config/smigle.yml
@@ -1,5 +1,5 @@
 # exampleSite/config.yaml
-baseURL: https://ashokkumark.github.io/ # Replace with your domain
+baseURL: https://aknotes.com/ # Replace with your domain
 languageCode: en-us
 theme: smigle
 title: Ashok Kadambala
